# napi-rs-example

./: Cargo.toml  README.md  build.js  index.js  package.json  test.js
.github/workflows/: CI.yml  ci.yml
src/: lib.rs
